# lamp_problem

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  socketlistener.cpp  socketlistener.h  types.h
